--- a/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
+++ b/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
@@ -198,17 +198,13 @@ Minimum requirements:
 
 The contact details must be included at the bottom of the email, after the main body of the email in the following format:
 
-Area:
-**Contact UQ Area Name**
-Monday to Friday 8:30am–5pm AEST
-email@uq.edu.au
-+617 0000 0000
-Vist UQ Area Name website
+#### Area:
 
-Individual (USET or C-suite):
-**Contact**
-email@uq.edu.au
-+617 0000 0000
+<Canvas of={footerContactStories.contactArea} />
+
+#### Individual (USET or C-suite):
+
+<Canvas of={footerContactStories.contact} />
 
 ### Vision 6
 
