--- a/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
+++ b/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
@@ -1,12 +1,12 @@
 import { Meta, Story, Canvas, Source } from "@storybook/blocks";
-import * as buttonStories from "../components/buttons.stories.js";
-import * as headerStories from "../components/header.stories.js";
-import * as senderHeaderStories from "../components/sender-header.stories.js";
-import * as footerStandardStories from "../components/footer-standard.stories.js";
-import * as footerMailingListStories from "../components/footer-mailing-list.stories.js";
-import * as footerBlockStories from "../components/footer-block.stories.js";
-import * as footerContactStories from "../components/footer-contact.stories.js";
-import * as typographyStories from "../components/typography.stories.js";
+import * as buttonStories from "../components/general-components/buttons.stories.js";
+import * as headerStories from "../components/general-components/o-header.stories.js";
+import * as senderHeaderStories from "../components/general-components/o-sender-header.stories.js";
+import * as footerStandardStories from "../components/general-components/footer-standard.stories.js";
+import * as footerMailingListStories from "../components/general-components/footer-mailing-list.stories.js";
+import * as footerBlockStories from "../components/general-components/footer-block.stories.js";
+import * as footerContactStories from "../components/general-components/footer-contact.stories.js";
+import * as typographyStories from "../components/general-components/typography.stories.js";
 
 <Meta title="Design guidelines/Email template guidelines" />
 
