--- a/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
+++ b/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
@@ -14,6 +14,8 @@ import * as typographyStories from "../components/general-components/typography.
 
 These guidelines help us ensure we maintain brand consistency and compliance in student email communications, preserving our brand’s strength and credibility while creating a cohesive experience for our students.
 
+To use any of the assets listed, go to [General components](?path=/docs/components-general-components--docs) folder and click 'show code' in the bottom right corner of the asset , then select 'Copy code' to copy to your clipboard
+
 ## Styles
 
 These styles define the look and feel of your email, including recommended fonts, colours, and link treatments for a cohesive and professional appearance
@@ -203,7 +205,7 @@ The contact details must be included at the bottom of the email, after the main 
 
 Properly structuring your content is essential to ensure maximum accessibility and readability for your audience.
 
-### layout
+### Layout
 
 - Left-align all content.
 - Use headings, lists, and concise paragraphs for better readability.
