--- a/packages/storybook-email/stories/templates/oracle/oracle.mdx
+++ b/packages/storybook-email/stories/templates/oracle/oracle.mdx
@@ -11,4 +11,4 @@ The editable section of these templates is the body content located between the 
 
 ## Standard template preview
 
-<Canvas of={oracleStories.oracle} />
+<Canvas of={oracleStories.oracle} sourceState="none" />
