--- a/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
+++ b/packages/storybook-email/stories/design-guidelines/email-guidelines.mdx
@@ -172,13 +172,13 @@ Includes:
 - UQ's marketing consent and privacy notice.
 - Unsubscribe text must specify which mailing list the user is unsubscribing from.
 
-<Canvas of={footerMailingListStories.footerMailingList} sourceState="none" />
+<Canvas of={footerMailingListStories.MailingListFooter} sourceState="none" />
 
 ### Block footer
 
 Used in emails without a contact footer to clearly separate the main content from the footer section.
 
-<Canvas of={footerBlockStories.footerBlock} sourceState="none" />
+<Canvas of={footerBlockStories.blockFooter} sourceState="none" />
 
 ## Contact footer
 
