--- a/packages/storybook-html/stories/components/profile/profile.mdx
+++ b/packages/storybook-html/stories/components/profile/profile.mdx
@@ -1,8 +1,8 @@
-import { Meta, Story, Canvas, Controls } from "@storybook/blocks";
+import { Meta, Story, Canvas, Controls, Source } from "@storybook/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
-import * as ProfileStories from "./profile.stories";
+import * as profileStories from "./profile.stories";
 
-<Meta of={ProfileStories} />
+<Meta of={profileStories} />
 
 # Profile
 
@@ -16,25 +16,12 @@ import * as ProfileStories from "./profile.stories";
 
 ## Overview
 
-The button component is used to make common actions more obvious and help users more easily perform them.
+A profile is a component that displays user information, including their name, position, and an optional profile image.
 
-### Default
+### Profile
 
-The default button style used for the primary action on a page, eg. a submit button on a form. This should generally only be used once per view.
+A profile using a link tag.
 
-<Canvas of={ProfileStories.Primary} />
-
-<Controls of={ProfileStories.Primary} />
-
-### States
-
-Default - Button text is not underlined. <br />
-Hover - Button text is underlined. The background and text color may change depending on the variant.
-
-### Breakpoints
-
-Breakpoints have no effect on the button component and visually remains the same.
-
-## Accessibility
-
-Colour contrast test for all buttons showed a WCAG AA Pass.
+<Canvas of={profileStories.profile} />
+<Controls of={profileStories.profile} />
+<Source of={profileStories.profile} />
