--- a/packages/storybook-html/stories/patterns/form-validation/form-validation.mdx
+++ b/packages/storybook-html/stories/patterns/form-validation/form-validation.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Canvas } from "@storybook/blocks";
-import baddestForm from "./form-errors-kitchen-sink.html";
+import baddestForm from "./form-errors-kitchen-sink.html?raw";
 import * as FormValidationStories from "./form-validation.stories";
 
 <Meta of={FormValidationStories} />
