--- a/packages/storybook-html/stories/components/avatar/avatar.mdx
+++ b/packages/storybook-html/stories/components/avatar/avatar.mdx
@@ -1,4 +1,10 @@
-import { Meta, Story, Canvas, Controls, Source } from "@storybook/addon-docs/blocks";
+import {
+  Meta,
+  Story,
+  Canvas,
+  Controls,
+  Source,
+} from "@storybook/addon-docs/blocks";
 import StatusBadge from "../../../.storybook/custom/components/StatusBadge";
 import * as avatarStories from "./avatar.stories";
 
