chore: review feedback + update docs

--- a/packages/storybook-react/stories/Usage.mdx
+++ b/packages/storybook-react/stories/Usage.mdx
@@ -14,9 +14,9 @@ First install the React package.
 npm i @uqds/react
 ```
 
-## Global CSS
+## CSS
 
-Include Global CSS once for a whole project. Component CSS is handled with
+Include CSS once for a whole project. Component CSS is handled with
 CSS Modules.
 
 ### PostCSS
@@ -28,7 +28,7 @@ CSS Modules.
 ### JS
 
 ```js
-import "@uqds/react/dist/main.css";
+import "@uqds/react/css";
 ```
 
 ## Component usage
