chore: fix badge mdx

--- a/packages/storybook-html/stories/components/accordion/accordion.mdx
+++ b/packages/storybook-html/stories/components/accordion/accordion.mdx
@@ -6,11 +6,8 @@ import * as AccordionStories from "./accordion.stories";
 
 # Accordion
 
-<StatusBadge.Stable />
-<StatusBadge.StableDoc />
-<a href="https://github.com/uq-its-ss/design-system/issues" target="_blank">
-  Check for open issues
-</a>
+<StatusBadge.Stable /> <StatusBadge.StableDoc /> [Check for open
+issues](https://github.com/uq-its-ss/design-system/issues)
 
 ## Overview
 
