fix: initial doco update. TODO: needs alot of polish

--- a/packages/storybook-html/stories/components/body/body-utilities.mdx
+++ b/packages/storybook-html/stories/components/body/body-utilities.mdx
@@ -40,7 +40,39 @@ Coming soon
 
 ## Padding adjustment
 
-Coming soon
+Use the padding utility classes to customise padding around elements.
+
+The classes are named using the format `padding-{-side}{-size}` where:
+
+`{-side}` is one of:
+
+- `-top`
+- `-right`
+- `-bottom`
+- `-left`
+- or omitted for all sides
+
+`{-size}` is one of:
+
+- `-uuuuul`
+- `-uuuul`
+- `-uuul`
+- `-uul`
+- `-ul`
+- `-xxxxl`
+- `-xxxl`
+- `-xxl`
+- `-xl`
+- `-l`
+- `-m`
+- `-s`
+- `-xs`
+
+### Examples
+
+`padding--uuul` applies `uuul`**(5rem) padding to **all sides\*\*
+
+`padding--bottom-xs` applies `xs`(5rem) padding to the **bottom side**
 
 ## Divider
 
